fix header not showing in mobile width screen size

--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -6,9 +6,10 @@
   border-width: 0px;
   margin-bottom: 50px;
   min-height: 80px;
+  z-index: 1;
 
   .navbar-brand {
-    margin-top: 10px;
+    margin: 10px;
     padding: 0px 20px 0px 0px;
     height: 60px;
     align-self: center;
@@ -28,6 +29,11 @@
         &:hover,
         &:focus {
           color: $color_highlight;
+        }
+
+        @media screen and (max-width: 992px) {
+          padding-top: 15px;
+          padding-bottom: 5px;
         }
       }
     }
